# Chess

./: pyproject.toml
src/: main.py  models.py  test.py  test_models.py  utils.py
src/chess/: __main__.py  main.py
src/chess/models/: exceptions.py  game.py  move.py  pieces.py  position.py
src/chess/tests/: conftest.py  test_board.py  test_make_move.py  test_piece_square_position_associations.py  test_pieces_movements.py  test_position_checks_and_pins.json  test_position_checks_and_pins.py  test_position_validity.py
src/chess/views/: board_view.py  piece_view.py
src/models/: board.py  directions.py  exceptions.py  game.py  move.py  pieces.py  position.py  square.py  utils.py
src/tests/: conftest.py  test_board.py  test_checks_and_pins.py  test_make_move.py  test_piece_movements.py  test_piece_square_position_associations.py  test_pieces.py  test_pieces_movements.py  test_position_checks_and_pins.py  test_position_validity.json  test_position_validity.py  test_square.py  testing-positions.json
src/views/: board_view.py  piece_view.py
tests/: conftest.py  test_board.py  test_make_move.py  test_piece_square_position_associations.py  test_pieces_movements.json  test_pieces_movements.py  test_position_checks_and_pins.py  test_position_validity.py
